Removed the height 100% from the App element. And if some elements needed that 100% fixed height they have to specify them in their own style rather than relying on the App(parent9 element. Thus Login needed that 100%(vh) fixed height so I specified that there but the footer's style had a bug caused by the row class so I wrapped it in a fluid container and all is fixed as before and more scalable.

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -41,10 +41,5 @@ input.form-control {
 }
 
 .App {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-  position: fixed;
   font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
 }
